--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "0.10.3",
+    "@mysten/kiosk": "^0.7.13",
     "@mysten/sui.js": "0.48.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
